syntax = "proto3";
package game;
option go_package = "game";
import "gamestate.proto";

message GameSitMessage {
  uint64 player_id = 1;
  uint32 seat_no = 2;
  float  buy_in = 3;
}

message GameJoinMessage {
  uint64 player_id = 1;
  string name = 2;
}


message GameStatusMessage {
  GameStatus status = 1;
}

message GamePlayerSatMessage {
  uint64 player_id = 1;
  uint32 seat_no = 2;
  float  buy_in = 3;
}

message GameStatusChangeMessage {
  GameStatus newStatus = 1;
}

message PlayerAtTableState {
  uint64 player_id = 1;
  uint32 seat_no = 2;
  float buy_in = 3;
  float current_balance = 4;
  PlayerStatus status = 5;
}

message GameDealHandMessage {
}

message GameTableStateMessage {
  repeated PlayerAtTableState players_state = 1;
  GameStatus status = 2;
  TableStatus table_status = 3;
}

message GameSetupNextHandMessage {
  bytes deck = 1;
  uint32 button_pos = 2;
}

message GameStartMessage {
  uint64 requesting_player_id = 1;
}

message GameQueryTableStateMessage {
  uint64 player_id = 1;     // the player asked for this
}

message GameMessage {
  string version = 1;
  uint32 club_id = 2;
  uint64 game_id = 3;
  uint64 player_id = 4;
  string message_type = 5;
  oneof game_message {
    GameSitMessage  take_seat = 6;
    GameStatusMessage status = 7;
    GamePlayerSatMessage  player_sat = 8;
    GameStatusChangeMessage status_change = 9;
    GameJoinMessage join_game = 10;
    GameDealHandMessage deal_hand = 11;
    GameTableStateMessage table_state = 12;
    GameSetupNextHandMessage next_hand = 13;
    GameStartMessage start_game = 14;
    GameQueryTableStateMessage query_table_state = 15;
    GamePlayerUpdate player_update = 16;
  }
}
